--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --body-background-color: #121212;
     --main-background-color: #1e1e1f;
     --secondary-background-color: #323232;
@@ -6,15 +6,24 @@
     --secondary-font-color: #cecece;
     --heading-color: #707071;
     --paragraph-color: #c8c8c8;
-    --secondary-color:#deb760;
+    --secondary-color: #deb760;
     --font-family: sans-serif;
+    --h1-font-size: 1.8rem;
+    --h2-font-size: 1.8rem;
+    --h3-font-size: 18px;
+    --h4-font-size: 16px;
+    --h5-font-size: 14px;
+    --h6-font-size: 12px;
+    --caption-font-size: 14px;
+
 }
 
 
-*{
+* {
     margin: 0;
 }
-body{
+
+body {
     background-color: var(--body-background-color);
     horiz-align: center;
     padding-top: 1rem;
@@ -24,9 +33,22 @@ body{
     width: 100%;
 }
 
-a{
+a {
     color: var(--main-font-color);
     text-decoration: none;
+}
+
+div.body{
+    display: grid;
+    grid-template-columns: 20% auto;
+    column-gap: 1rem;
+
+}
+
+@media screen and (max-width: 400px){
+    div.body{
+        display: block;
+    }
 }
 
 
